Bugfix: Align the feature boxes centered

--- a/src/css/featureBox.module.css
+++ b/src/css/featureBox.module.css
@@ -1,6 +1,6 @@
 .featureBoxContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-flow: row wrap;
 
   .featureBox {
